// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The VerticalCardListFeatureConnected component should not render as a featured card without cards 1`] = `null`;

exports[`The VerticalCardListFeatureConnected component should not render without cards 1`] = `null`;

exports[`The VerticalCardListFeatureConnected component should render 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View>
      <Text
        secondary={true}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.6)",
            "fontFamily": "InterUI-Bold",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        Check it out
      </Text>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "UniversalContentItem",
          "action": "READ_CONTENT",
          "coverImage": Array [
            Object {
              "__typename": "ImageMediaSource",
              "uri": "https://picsum.photos/200/200",
            },
          ],
          "hasAction": false,
          "id": "UniversalContentItem:123",
          "labelText": "What",
          "relatedNode": Object {
            "__typename": "UniversalContentItem",
            "id": "UniversalContentItem:123",
          },
          "summary": "Read",
          "title": "Boom",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "__typename": "",
        "action": "",
        "actionIcon": "umbrella",
        "coverImage": Array [
          Object {
            "uri": "",
          },
        ],
        "hasAction": true,
        "isLoading": true,
        "labelText": "",
        "relatedNode": Object {
          "__typename": "",
          "id": "",
        },
        "summary": "boom",
        "title": "",
      }
    }
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={0.7}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "__typename": "ImageMediaSource",
                        "cache": "force-cache",
                        "uri": "https://picsum.photos/200/200",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "__typename": "ImageMediaSource",
                      "cache": "force-cache",
                      "uri": "https://picsum.photos/200/200",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 16,
                        "lineHeight": 24,
                      }
                    }
                  >
                    What
                  </Text>
                </View>
                <Text
                  numberOfLines={2}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Black",
                      "fontSize": 24,
                      "lineHeight": 27.6,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#27272E",
                      }
                    }
                  >
                    Boom
                  </Text>
                </Text>
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    Read
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The VerticalCardListFeatureConnected component should render a featured loading state when isLoading 1`] = `
<RCTScrollView
  ListHeaderComponent={
    <mapProps(Component)
      vertical={false}
    >
      <FeatureTitles
        isLoading={true}
      />
    </mapProps(Component)>
  }
  data={
    Array [
      Object {
        "__typename": "",
        "action": "",
        "actionIcon": "umbrella",
        "coverImage": Array [
          Object {
            "uri": "",
          },
        ],
        "hasAction": true,
        "isLoading": true,
        "labelText": "",
        "relatedNode": Object {
          "__typename": "",
          "id": "",
        },
        "summary": "boom",
        "title": "",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={0.7}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={true}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 48,
            "paddingVertical": 0,
          }
        }
        vertical={false}
      >
        <View />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          isLoading={true}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 16,
              "marginHorizontal": 16,
              "marginVertical": 12,
              "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <View
            style={
              Object {
                "borderRadius": 16,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgb(249, 249, 251)",
                  "bottom": 0,
                  "flex": 1,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Image
                blurRadius={80}
                fadeDuration={250}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <View
                material="regular"
                style={
                  Object {
                    "backgroundColor": "rgba(242, 242, 247, 0.8)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
            <Image
              fadeDuration={250}
              isLoading={true}
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "",
                  },
                ]
              }
              style={
                Object {
                  "aspectRatio": 1,
                  "backgroundColor": "#A5A5A5",
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": null,
                    "flexDirection": "row",
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#A5A5A5",
                    "borderRadius": 16,
                    "height": 24,
                    "marginVertical": 1.8000000000000007,
                    "width": "100%",
                  }
                }
              />
              <Text
                bold={false}
                italic={false}
                numberOfLines={3}
                style={
                  Object {
                    "color": "#27272E",
                    "fontFamily": "InterUI-Regular",
                    "fontSize": 16,
                    "lineHeight": 26,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgba(39, 39, 46, 0.6)",
                    }
                  }
                >
                  boom
                </Text>
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "paddingTop": 8,
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`The VerticalCardListFeatureConnected component should render a loading state when isLoading 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View />
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId0",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId1",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId2",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId3",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId4",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId5",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId6",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId7",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId8",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
        Object {
          "__typename": "",
          "action": "",
          "actionIcon": "umbrella",
          "coverImage": Array [
            Object {
              "uri": "",
            },
          ],
          "hasAction": true,
          "id": "fakeId9",
          "isLoading": true,
          "labelText": "",
          "relatedNode": Object {
            "__typename": "",
            "id": "",
          },
          "summary": "boom",
          "title": "",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    loadingStateObject={
      Object {
        "__typename": "",
        "action": "",
        "actionIcon": "umbrella",
        "coverImage": Array [
          Object {
            "uri": "",
          },
        ],
        "hasAction": true,
        "isLoading": true,
        "labelText": "",
        "relatedNode": Object {
          "__typename": "",
          "id": "",
        },
        "summary": "boom",
        "title": "",
      }
    }
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.7}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshing={true}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            isLoading={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "marginHorizontal": 16,
                "marginVertical": 12,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgb(249, 249, 251)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <Image
                  blurRadius={80}
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": "#A5A5A5",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
                <View
                  material="regular"
                  style={
                    Object {
                      "backgroundColor": "rgba(242, 242, 247, 0.8)",
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Image
                fadeDuration={250}
                isLoading={true}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "cache": "force-cache",
                      "uri": "",
                    },
                  ]
                }
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#A5A5A5",
                    "width": "100%",
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": null,
                      "flexDirection": "row",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#A5A5A5",
                      "borderRadius": 16,
                      "height": 24,
                      "marginVertical": 1.8000000000000007,
                      "width": "100%",
                    }
                  }
                />
                <Text
                  bold={false}
                  italic={false}
                  numberOfLines={3}
                  style={
                    Object {
                      "color": "#27272E",
                      "fontFamily": "InterUI-Regular",
                      "fontSize": 16,
                      "lineHeight": 26,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgba(39, 39, 46, 0.6)",
                      }
                    }
                  >
                    boom
                  </Text>
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingTop": 8,
                      "width": "100%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The VerticalCardListFeatureConnected component should render as a featured card 1`] = `
<RCTScrollView
  ListHeaderComponent={
    <mapProps(Component)
      vertical={false}
    >
      <FeatureTitles
        subtitle="Check it out"
        title=""
      />
    </mapProps(Component)>
  }
  data={
    Array [
      Object {
        "__typename": "UniversalContentItem",
        "action": "READ_CONTENT",
        "coverImage": Array [
          Object {
            "__typename": "ImageMediaSource",
            "uri": "https://picsum.photos/200/200",
          },
        ],
        "hasAction": false,
        "id": "UniversalContentItem:123",
        "labelText": "What",
        "relatedNode": Object {
          "__typename": "UniversalContentItem",
          "id": "UniversalContentItem:123",
        },
        "summary": "Read",
        "title": "Boom",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={0.7}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={false}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingHorizontal": 16,
            "paddingTop": 48,
            "paddingVertical": 0,
          }
        }
        vertical={false}
      >
        <View>
          <Text
            secondary={true}
            style={
              Object {
                "color": "rgba(39, 39, 46, 0.6)",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Check it out
          </Text>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 16,
              "marginHorizontal": 16,
              "marginVertical": 12,
              "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <View
            style={
              Object {
                "borderRadius": 16,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgb(249, 249, 251)",
                  "bottom": 0,
                  "flex": 1,
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <Image
                blurRadius={80}
                fadeDuration={250}
                onLoad={[Function]}
                source={
                  Array [
                    Object {
                      "__typename": "ImageMediaSource",
                      "cache": "force-cache",
                      "uri": "https://picsum.photos/200/200",
                    },
                  ]
                }
                style={
                  Object {
                    "backgroundColor": "#A5A5A5",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <View
                material="regular"
                style={
                  Object {
                    "backgroundColor": "rgba(242, 242, 247, 0.8)",
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
            <Image
              fadeDuration={250}
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "__typename": "ImageMediaSource",
                    "cache": "force-cache",
                    "uri": "https://picsum.photos/200/200",
                  },
                ]
              }
              style={
                Object {
                  "aspectRatio": 1,
                  "backgroundColor": "#A5A5A5",
                  "width": "100%",
                }
              }
            />
            <View
              style={
                Object {
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": null,
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgba(39, 39, 46, 0.6)",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 16,
                      "lineHeight": 24,
                    }
                  }
                >
                  What
                </Text>
              </View>
              <Text
                numberOfLines={2}
                style={
                  Object {
                    "color": "#27272E",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 24,
                    "lineHeight": 27.6,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#27272E",
                    }
                  }
                >
                  Boom
                </Text>
              </Text>
              <Text
                bold={false}
                italic={false}
                numberOfLines={3}
                style={
                  Object {
                    "color": "#27272E",
                    "fontFamily": "InterUI-Regular",
                    "fontSize": 16,
                    "lineHeight": 26,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "rgba(39, 39, 46, 0.6)",
                    }
                  }
                >
                  Read
                </Text>
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "paddingTop": 8,
                    "width": "100%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
